// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-component component parameter 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "./Button",
      "import": "import Button from './Button';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 4,
            },
            "start": Object {
              "column": 6,
              "line": 4,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 46,
              "line": 4,
            },
            "start": Object {
              "column": 28,
              "line": 4,
            },
          },
          "name": "component",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 45,
                  "line": 4,
                },
                "start": Object {
                  "column": 39,
                  "line": 4,
                },
              },
              "name": "Button",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta } from '@storybook/addon-docs/blocks';
import { Button } from './Button';
<Meta title=\\"Storybook/MDX\\" component={Button} />
      ",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component named alias import 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "./Button",
      "import": "import Button from './Button';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 4,
            },
            "start": Object {
              "column": 6,
              "line": 4,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 46,
              "line": 4,
            },
            "start": Object {
              "column": 28,
              "line": 4,
            },
          },
          "name": "component",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 45,
                  "line": 4,
                },
                "start": Object {
                  "column": 39,
                  "line": 4,
                },
              },
              "name": "Button",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta } from '@storybook/addon-docs/blocks';
import { Btn as Button } from './Button';
<Meta title=\\"Storybook/MDX\\" component={Button} />
      ",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component story import 1`] = `
Object {
  "components": Object {
    "Button": Object {
      "from": "./Button",
      "import": "import Button from './Button';
",
      "loc": undefined,
      "name": "Button",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
    "Toggle": Object {
      "from": "./Toggle",
      "import": "import Toggle from './Toggle';
",
      "loc": undefined,
      "name": "Toggle",
      "repository": undefined,
      "request": undefined,
      "source": undefined,
    },
  },
  "kinds": Object {
    "Storybook/MDX": Object {
      "component": "Button",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 33,
              "line": 22,
            },
            "start": Object {
              "column": 12,
              "line": 22,
            },
          },
          "name": "title",
          "value": "Storybook/MDX",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 52,
              "line": 22,
            },
            "start": Object {
              "column": 34,
              "line": 22,
            },
          },
          "name": "component",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 51,
                  "line": 22,
                },
                "start": Object {
                  "column": 45,
                  "line": 22,
                },
              },
              "name": "Button",
              "value": "Button",
            },
          ],
        },
      ],
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta, Story } from '@storybook/addon-docs/blocks';
import { Btn as Button } from './Button';
import { Toggle } from './Toggle';

<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"my-story\\" component={Toggle} />
      ",
      "stories": Array [
        "storybook-mdx--my-story",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--my-story": Object {
      "component": "Toggle",
      "id": "storybook-mdx--my-story",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 50,
          "line": 23,
        },
        "start": Object {
          "column": 6,
          "line": 23,
        },
      },
      "name": "my-story",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 28,
              "line": 23,
            },
            "start": Object {
              "column": 13,
              "line": 23,
            },
          },
          "name": "name",
          "value": "my-story",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 47,
              "line": 23,
            },
            "start": Object {
              "column": 29,
              "line": 23,
            },
          },
          "name": "component",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 46,
                  "line": 23,
                },
                "start": Object {
                  "column": 40,
                  "line": 23,
                },
              },
              "name": "Toggle",
              "value": "Toggle",
            },
          ],
        },
      ],
      "source": "<Story name=\\"my-story\\" component={Toggle} />",
    },
  },
}
`;
